fix: adjust padding and color styles in index.css for improved layout and readability

--- a/src/index.css
+++ b/src/index.css
@@ -30,12 +30,14 @@ main {
   display: flex;
   flex-direction: column;
   gap: 20px;
-  padding: 30px 30px 10px;
+  padding: 30px;
   justify-content: center;
   align-items: center;
 }
 
 .explainer {
+  color:darkgray;
+  font-size: 0.9rem;
   text-align: center;
   max-width: 500px;
 }
@@ -116,7 +118,8 @@ ul.ingredients-list > li {
 }
 
 .suggested-recipe-container {
-  color: #475467;
+  width: 90%;
+  color: black;
   line-height: 28px;
   font-size: 1.125rem;
   font-weight: 400;
